* Fixed delayed application of font cnahges on dclock and weather plugins.

0.9.3
-------------------------------------------------------------------------
* Finally fixed battery calculations, it missed Power so left time was
    always at zero.
* Fixed task window raising on drop file on it (was broken since 0.9.0).

0.9.2
-------------------------------------------------------------------------
* Fixed battery selection if battery detached but another is available.
* Fixed battery percentage calculations if charge isn't available but
    energy is, it appears broken in 0.9.0.
* Fixed wrong state change on task button when hovered, it shouldn't
    receive selected state until window has urgency.
* Fixed wrong flat button appearance when hovered, it wasn't flat.

0.9.1
-------------------------------------------------------------------------
* Fixed build failure without ALSA.
* Added alternative mixers if build using OSS.
* Fixed panel flicker with some window managers.

0.9.0
-------------------------------------------------------------------------
* Added support for laptops with multiple batteries.
* Added a way to scroll through workspaces by using the scroll wheel over
    the deskno plugin.
* Bunch of fixes for GTK+ 3.0 compatibility.
* Fixed outdated lxpanel man page.
* Fixed weather locations query (since YQL was changed recently).
* Converted space plugin into internal PanelSpace widget in liblxpanel.
* Converted task button into widget class to avoid ambiguous code.
* Added support for third-party plugins localized descriptions.
* Implemented "lxpanelctl command ..." to send message to panel plugin.
* Added APIs for PanelIconGrid to draw focus on drop.
* Converted launch button into widget class for more easy management.
* Adjusted PanelIconGrid: min spacing is now 1, no_window flag is now
    left unset by default, spacing is taken into account on overall size
    to be consistent on chosen orientation.