@@ -20,6 +20,7 @@ LXPanel - Lightweight X11 desktop panel
     Charles Lehner <cel10@users.sf.net>
     Stanislav Kozina, Ersin <xersin@users.sf.net>
     Mamoru TASAKA <mtasaka@fedoraproject.org>
+    number Zero <numzero@users.sf.net>
 
 [History]
 LXPanel is a derivative work from fbpanel [1] written by Anatoly Asviyan,
