@@ -1,4 +1,5 @@
 * Fixed delayed application of font cnahges on dclock and weather plugins.
+* Allowed switching workplaces by scrolling over the pager.
 
 0.9.3
 -------------------------------------------------------------------------
